[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.18"
no-panic = "0.1.15"
spin = "0.9.1"
x86_64 = "0.14.3"
uart_16550 = "0.2.15"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
